<resources>
    <string name="app_name">Android Paint</string>

    <string name="stroke_width">Stroke Width</string>
    <string name="style">Style</string>
    <string name="line">Line</string>
    <string name="point">Point</string>

    <string name="are_you_sure_want_to_exit">Do you want to exit the program?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="delete">Delete</string>
    <string name="color">Color</string>
    <string name="text_to_paste">Text to paste...</string>
    <string name="font_type">Font type:</string>
    <string name="font_size">Font size:</string>
    <string name="bold">Bold</string>
    <string name="underlined">Underlined</string>
    <string name="italic">Italic</string>
    <string name="text">Text</string>
    <string name="newp">New</string>
    <string name="overwrite">Overwrite</string>
    <string name="existing_projects">Existing\nProjects:</string>
    <string name="new_project">New\nProject:</string>
    <string name="project_name">Project name</string>
    <string name="strk_small">Small</string>
    <string name="strk_med">Medium</string>
    <string name="strk_big">Large</string>
    <string name="preview">Preview:</string>
    <string name="strk_spec">Special</string>
</resources>
