<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".TextPicker"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stroke_width"
            android:textSize="25dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/stroke_size_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:text="15"
            android:layout_gravity="center_vertical"
            android:textAlignment="center"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/okbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/ok" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textSize="30dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_vertical"/>

    <com.example.drawinghw.view.DrawingView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toolbar"
        android:background="@android:color/black" />


</GridLayout>